--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "random",
   "version": "0.1.0",
+  "homepage": "https://aldoprogrammer.github.io/portofolio-aldo-dgn-react-js",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
